--- a/WorkingClass/web/WEB-INF/web.xml
+++ b/WorkingClass/web/WEB-INF/web.xml
@@ -3,14 +3,100 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-		 
-		 
-		 
-		 
-		<servlet-mapping>
-			<servlet-name>default</servlet-name>
-			<url-pattern>*.css</url-pattern>
-			<url-pattern>*.js</url-pattern>
-			<url-pattern>*.png</url-pattern>
-		</servlet-mapping>
+    <servlet>
+        <servlet-name>MainPageServlet</servlet-name>
+        <servlet-class>kpfu.itis.group11_801.kilin.workingClass.servlets.mainPageServletPackage.MainPageServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>RegistrationServlet</servlet-name>
+        <servlet-class>
+            kpfu.itis.group11_801.kilin.workingClass.servlets.registrationServletPackage.RegistrationServlet
+        </servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>UserServlet</servlet-name>
+        <servlet-class>kpfu.itis.group11_801.kilin.workingClass.servlets.userServletPackage.UserServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>CreateCompanyServlet</servlet-name>
+        <servlet-class>
+            kpfu.itis.group11_801.kilin.workingClass.servlets.createCompanyServletPackage.CreateCompanyServlet
+        </servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>CompanyServlet</servlet-name>
+        <servlet-class>kpfu.itis.group11_801.kilin.workingClass.servlets.companyServletPackage.CompanyServlet
+        </servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>InviteServlet</servlet-name>
+        <servlet-class>kpfu.itis.group11_801.kilin.workingClass.servlets.inviteServletPackage.InviteServlet
+        </servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>AgreeToInviteServlet</servlet-name>
+        <servlet-class>kpfu.itis.group11_801.kilin.workingClass.servlets.agreeToInvitePackage.AgreeToInviteServlet
+        </servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ChangeUserInfoServlet</servlet-name>
+        <servlet-class>kpfu.itis.group11_801.kilin.workingClass.servlets.changeUserInfoServletPackage.ChangeUserInfoServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PromotionServlet</servlet-name>
+        <servlet-class>kpfu.itis.group11_801.kilin.workingClass.servlets.promotionServletPackage.PromotionServlet
+        </servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PromotionsServlet</servlet-name>
+        <servlet-class>kpfu.itis.group11_801.kilin.workingClass.servlets.promotionsServletPackage.PromotionsServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>PromotionsServlet</servlet-name>
+        <url-pattern>/promotions</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PromotionServlet</servlet-name>
+        <url-pattern>/promotion</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AgreeToInviteServlet</servlet-name>
+        <url-pattern>/agree_to_invite</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>MainPageServlet</servlet-name>
+        <url-pattern>/main</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RegistrationServlet</servlet-name>
+        <url-pattern>/registration</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UserServlet</servlet-name>
+        <url-pattern>/user</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.css</url-pattern>
+        <url-pattern>*.js</url-pattern>
+        <url-pattern>*.png</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CreateCompanyServlet</servlet-name>
+        <url-pattern>/create_company</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CompanyServlet</servlet-name>
+        <url-pattern>/company</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>InviteServlet</servlet-name>
+        <url-pattern>/invite</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ChangeUserInfoServlet</servlet-name>
+        <url-pattern>/set</url-pattern>
+    </servlet-mapping>
+
 </web-app>
