--- a/WorkingClass/web/WEB-INF/web.xml
+++ b/WorkingClass/web/WEB-INF/web.xml
@@ -157,6 +157,7 @@
         <url-pattern>*.css</url-pattern>
         <url-pattern>*.js</url-pattern>
         <url-pattern>*.png</url-pattern>
+        <url-pattern>*.jpg</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>CreateCompanyServlet</servlet-name>
